Bug 706859: Keep fz layer up to date with changes in pdf pages.

When we pdf_insert_page or pdf_delete_page, we modify the pdf
page tree, but don't adjust the list of opened pages that the
fz layer is holding.

Make those modifications here.